[package]
name = "onedrive-mount"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }

# daemon-only
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }
notify = { version = "8.2.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2", optional = true }
nix = { version = "0.29", features = ["signal", "process"], optional = true }

# gui-only — disable wayland (dlopen at runtime), use x11 + glow (static OpenGL)
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "default_fonts", "glow", "x11"], optional = true }
resvg = { version = "0.44", optional = true }
serde_json = { version = "1", optional = true }
open = { version = "5", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
daemon = ["dep:tokio", "dep:tokio-util", "dep:notify", "dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender", "dep:nix"]
gui = ["dep:eframe", "dep:resvg", "dep:serde_json", "dep:open"]

[[bin]]
name = "onedrive-mountd"
path = "src/bin/daemon/main.rs"
required-features = ["daemon"]

[[bin]]
name = "onedrive-mount"
path = "src/bin/gui/main.rs"
required-features = ["gui"]
